# HtmlPageParser

./: README.md  pyproject.toml  readme.md
src/: htmllabel.py  json2markdown.py  parser.py  test.html
src/HtmlPageParser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: json_data.json  test.html  test_json2markdown.py  test_parser.py
