[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "HtmlPageParser"
version = "0.0.1"
authors = [
  { name="Jeffrey Yang", email="snjyor@163.com" },
]
description = "A generic HTML page parser"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/snjyor/HtmlParser"
